AYS-441 | Methods Has Been Refactored End to End in `PermissionDataSource` Class